--- a/Projects/SoundDefaultUI/MainWindow.xaml
+++ b/Projects/SoundDefaultUI/MainWindow.xaml
@@ -2,7 +2,6 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         Style="{StaticResource MaterialDesignWindow}"
         Title="{Binding WindowTitle}" Height="320" Width="700"
         materialDesign:ColorZoneAssist.Mode="PrimaryLight"
@@ -10,14 +9,17 @@
     <DockPanel Margin="10">
         <Grid DockPanel.Dock="Top">
             <StackPanel>
-            <TextBlock Text="Device PnP Identifier" FontWeight="Bold" Margin="0,0,0,5"/>
-            <TextBox Text="{Binding Device.PnpId}" IsReadOnly="True" Margin="0,0,0,10"/>
+            <TextBlock Text="PnP Identifier" FontWeight="Bold" Margin="0,0,0,5"/>
+                <TextBox Text="{Binding Device.PnpId, Mode = OneWay, TargetNullValue='(No device)', FallbackValue='(No device)'}" IsReadOnly="True" Margin="0,0,0,10"/>
 
-            <TextBlock Text="Device Name" FontWeight="Bold" Margin="0,0,0,5"/>
-            <TextBox Text="{Binding Device.DeviceName}" IsReadOnly="True" Margin="0,0,0,10"/>
+            <TextBlock Text="Name" FontWeight="Bold" Margin="0,0,0,5"/>
+                <TextBox Text="{Binding Device.DeviceName, Mode = OneWay, TargetNullValue='(No name)', FallbackValue='(No name)'}" IsReadOnly="True" Margin="0,0,0,10"/>
 
-            <TextBlock Text="Volume Level, 0 - 1000" FontWeight="Bold" Margin="0,0,0,5"/>
-            <TextBox Text="{Binding Device.VolumeLevel}" IsReadOnly="True" Margin="0,0,0,10"/>
+            <TextBlock Text="Output Volume Level" FontWeight="Bold" Margin="0,0,0,5"/>
+            <TextBox Text="{Binding Device.RenderVolumePercentText, Mode = OneWay, TargetNullValue='-', FallbackValue='-'}" IsReadOnly="True" Margin="0,0,0,10"/>
+
+            <TextBlock Text="Input Volume Level" FontWeight="Bold" Margin="0,0,0,5"/>
+            <TextBox Text="{Binding Device.CaptureVolumePercentText, Mode = OneWay, TargetNullValue='-', FallbackValue='-'}" IsReadOnly="True" Margin="0,0,0,10"/>
         </StackPanel>
     </Grid>
         <Button Content="Refresh Volume Level"
