Input or output can be disabled, if device does not support it

--- a/Projects/SoundDefaultUI/MainWindow.xaml
+++ b/Projects/SoundDefaultUI/MainWindow.xaml
@@ -4,29 +4,52 @@
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         Style="{StaticResource MaterialDesignWindow}"
         Title="{Binding WindowTitle}" Height="320" Width="700"
-        materialDesign:ColorZoneAssist.Mode="PrimaryLight"
-        >
+        materialDesign:ColorZoneAssist.Mode="PrimaryLight">
+    <Window.Resources>
+        <Style x:Key="GrayOnDisabledTextBlock" TargetType="TextBlock">
+            <Setter Property="Foreground" Value="{DynamicResource MaterialDesignBody}" />
+            <Style.Triggers>
+                <Trigger Property="IsEnabled" Value="False">
+                    <Setter Property="Foreground" Value="LightGray" />
+                </Trigger>
+            </Style.Triggers>
+        </Style>
+    </Window.Resources>
+
     <DockPanel Margin="10">
         <Grid DockPanel.Dock="Top">
             <StackPanel>
-            <TextBlock Text="PnP Identifier" FontWeight="Bold" Margin="0,0,0,5"/>
-                <TextBox Text="{Binding Device.PnpId, Mode = OneWay, TargetNullValue='(No device)', FallbackValue='(No device)'}" IsReadOnly="True" Margin="0,0,0,10"/>
+                <TextBlock Text="PnP Identifier" FontWeight="Bold" Margin="0,0,0,5" />
+                <TextBox
+                    Text="{Binding Device.PnpId, Mode = OneWay, TargetNullValue='(No device)', FallbackValue='(No device)'}"
+                    IsReadOnly="True" Margin="0,0,0,10" />
 
-            <TextBlock Text="Name" FontWeight="Bold" Margin="0,0,0,5"/>
-                <TextBox Text="{Binding Device.DeviceName, Mode = OneWay, TargetNullValue='(No name)', FallbackValue='(No name)'}" IsReadOnly="True" Margin="0,0,0,10"/>
+                <TextBlock Text="Name" FontWeight="Bold" Margin="0,0,0,5" />
+                <TextBox
+                    Text="{Binding Device.DeviceName, Mode = OneWay, TargetNullValue='(No name)', FallbackValue='(No name)'}"
+                    IsReadOnly="True" Margin="0,0,0,10" />
 
-            <TextBlock Text="Output Volume Level" FontWeight="Bold" Margin="0,0,0,5"/>
-            <TextBox Text="{Binding Device.RenderVolumePercentText, Mode = OneWay, TargetNullValue='-', FallbackValue='-'}" IsReadOnly="True" Margin="0,0,0,10"/>
+                <TextBlock Text="Output Volume Level" FontWeight="Bold" Margin="0,0,0,5"
+                           IsEnabled="{Binding Device.IsRenderingAvailable}"
+                           Style="{StaticResource GrayOnDisabledTextBlock}" />
+                <TextBox
+                    Text="{Binding Device.RenderVolumePercentText, Mode = OneWay, TargetNullValue='-', FallbackValue='-'}"
+                    IsReadOnly="True" Margin="0,0,0,10"
+                    IsEnabled="{Binding Device.IsRenderingAvailable}" />
 
-            <TextBlock Text="Input Volume Level" FontWeight="Bold" Margin="0,0,0,5"/>
-            <TextBox Text="{Binding Device.CaptureVolumePercentText, Mode = OneWay, TargetNullValue='-', FallbackValue='-'}" IsReadOnly="True" Margin="0,0,0,10"/>
-        </StackPanel>
-    </Grid>
+                <TextBlock Text="Input Volume Level" FontWeight="Bold" Margin="0,0,0,5"
+                           IsEnabled="{Binding Device.IsCapturingAvailable}"
+                           Style="{StaticResource GrayOnDisabledTextBlock}" />
+                <TextBox
+                    Text="{Binding Device.CaptureVolumePercentText, Mode = OneWay, TargetNullValue='-', FallbackValue='-'}"
+                    IsReadOnly="True" Margin="0,0,0,10"
+                    IsEnabled="{Binding Device.IsCapturingAvailable}" />
+            </StackPanel>
+        </Grid>
         <Button Content="Refresh Volume Level"
                 Command="{Binding RefreshCommand}"
                 HorizontalAlignment="Left"
                 VerticalAlignment="Bottom"
-                Width="230"
-                />
+                Width="230" />
     </DockPanel>
 </Window>
