--- a/Projects/SoundDefaultUI/MainWindow.xaml
+++ b/Projects/SoundDefaultUI/MainWindow.xaml
@@ -2,6 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+        xmlns:local="clr-namespace:SoundDefaultUI"
         Style="{StaticResource MaterialDesignWindow}"
         Title="{Binding WindowTitle}" Height="320" Width="700"
         materialDesign:ColorZoneAssist.Mode="PrimaryLight">
@@ -39,20 +40,40 @@
                     IsEnabled="{Binding IsDeviceNotNull}"/>
 
                 <TextBlock Text="Output Volume Level" FontWeight="Bold" Margin="0,0,0,5"
-                           IsEnabled="{Binding IsDeviceNotNullAndHasRendering}"
+                           IsEnabled="{Binding IsRenderingAvailable}"
                            Style="{StaticResource GrayOnDisabledTextBlock}" />
-                <TextBox
-                    Text="{Binding Device.RenderVolumePercentText, Mode = OneWay, TargetNullValue='null value'}"
-                    IsReadOnly="True" Margin="0,0,0,10"
-                    IsEnabled="{Binding IsDeviceNotNullAndHasRendering}" />
+                <Grid Height="28" Margin="0,0,0,10" VerticalAlignment="Center">
+                    <ProgressBar
+                        Value="{Binding Device.RenderVolumeLevel, Mode=OneWay}"
+                        Maximum="1000"
+                        Height="28"
+                        VerticalAlignment="Center"
+                        Opacity="{Binding RenderingAvailability2IndicatorOpacity}" />
+                    <TextBlock
+                        Text="{Binding Device.RenderVolumePercentText, Mode=OneWay, TargetNullValue='-'}"
+                        HorizontalAlignment="Center"
+                        VerticalAlignment="Center"
+                        FontWeight="Bold"
+                        Foreground="{DynamicResource MaterialDesignBody}" />
+                </Grid>
 
                 <TextBlock Text="Input Volume Level" FontWeight="Bold" Margin="0,0,0,5"
-                           IsEnabled="{Binding IsDeviceNotNullAndHasCapturing}"
+                           IsEnabled="{Binding IsCapturingAvailable}"
                            Style="{StaticResource GrayOnDisabledTextBlock}" />
-                <TextBox
-                    Text="{Binding Device.CaptureVolumePercentText, Mode = OneWay, TargetNullValue='null value', FallbackValue=''}"
-                    IsReadOnly="True" Margin="0,0,0,10"
-                    IsEnabled="{Binding IsDeviceNotNullAndHasCapturing}" />
+                <Grid Height="28" Margin="0,0,0,10" VerticalAlignment="Center">
+                    <ProgressBar
+                        Value="{Binding Device.CaptureVolumeLevel, Mode=OneWay}"
+                        Maximum="1000"
+                        Height="28"
+                        VerticalAlignment="Center"
+                        Opacity="{Binding CapturingAvailability2IndicatorOpacity}" />
+                    <TextBlock
+                        Text="{Binding Device.CaptureVolumePercentText, Mode=OneWay, TargetNullValue='-'}"
+                        HorizontalAlignment="Center"
+                        VerticalAlignment="Center"
+                        FontWeight="Bold"
+                        Foreground="{DynamicResource MaterialDesignBody}" />
+                </Grid>
             </StackPanel>
         </Grid>
         <!--
