--- a/Projects/SoundDefaultUI/MainWindow.xaml
+++ b/Projects/SoundDefaultUI/MainWindow.xaml
@@ -1,8 +1,13 @@
-﻿<Window x:Class="SoundDefaultUI.MainWindow"
+﻿<!-- ReSharper disable once Xaml.StaticResourceNotResolved -->
+<Window x:Class="SoundDefaultUI.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         xmlns:local="clr-namespace:SoundDefaultUI"
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        mc:Ignorable="d"
+        d:DataContext="{d:DesignInstance Type=local:MainViewModel}"
         Style="{StaticResource MaterialDesignWindow}"
         Title="{Binding WindowTitle}" Height="400" Width="700"
         materialDesign:ColorZoneAssist.Mode="{Binding Source={x:Static local:ThemeService.Instance}, Path=IsDarkTheme, Converter={StaticResource ThemeToColorZoneModeConverter}}">
@@ -20,16 +25,16 @@
 
     <DockPanel Margin="5">
         <!-- Theme Status Display -->
-        <StackPanel DockPanel.Dock="Top" 
+        <StackPanel DockPanel.Dock="Top"
                     Orientation="Horizontal"
-                    HorizontalAlignment="Right" 
+                    HorizontalAlignment="Right"
                     Margin="0,0,10,5">
         </StackPanel>
-        
-        <materialDesign:Card DockPanel.Dock="Top" Margin="0" Background="Transparent" 
+
+        <materialDesign:Card DockPanel.Dock="Top" Margin="0" Background="Transparent"
                              materialDesign:ElevationAssist.Elevation="Dp0">
-            <GroupBox Header="Default Render Device" 
-                      Style="{DynamicResource MaterialDesignGroupBox}" 
+            <GroupBox Header="Default Render Device"
+                      Style="{DynamicResource MaterialDesignGroupBox}"
                       Margin="10"
                       Background="Transparent"
                       materialDesign:ColorZoneAssist.Mode="PrimaryMid"
@@ -42,7 +47,7 @@
                     <TextBox
                         Text="{Binding Device.PnpId, Mode = OneWay, TargetNullValue='null value', FallbackValue=''}"
                         IsReadOnly="True" Margin="0,0,0,10"
-                        IsEnabled="{Binding IsDeviceNotNull}"/>
+                        IsEnabled="{Binding IsDeviceNotNull}" />
 
                     <TextBlock Text="Name" FontWeight="Bold" Margin="0,0,0,5"
                                IsEnabled="{Binding IsDeviceNotNull}"
@@ -51,20 +56,20 @@
                     <TextBox
                         Text="{Binding Device.DeviceName, Mode = OneWay, TargetNullValue='null value', FallbackValue=''}"
                         IsReadOnly="True" Margin="0,0,0,10"
-                        IsEnabled="{Binding IsDeviceNotNull}"/>
+                        IsEnabled="{Binding IsDeviceNotNull}" />
 
                     <TextBlock Text="Output Volume Level" FontWeight="Bold" Margin="0,0,0,5"
                                IsEnabled="{Binding IsRenderingAvailable}"
                                Style="{StaticResource GrayOnDisabledTextBlock}" />
                     <Grid Height="28" Margin="0,0,0,10" VerticalAlignment="Center">
                         <ProgressBar
-                            Value="{Binding Device.RenderVolumeLevel, Mode=OneWay}"
+                            Value="{Binding Device.RenderVolumeLevel, Mode=OneWay, TargetNullValue='-', FallbackValue='-'}"
                             Maximum="1000"
                             Height="28"
                             VerticalAlignment="Center"
                             Opacity="{Binding RenderingAvailability2IndicatorOpacity}" />
                         <TextBlock
-                            Text="{Binding Device.RenderVolumePercentText, Mode=OneWay, TargetNullValue='-'}"
+                            Text="{Binding Device.RenderVolumePercentText, Mode=OneWay, TargetNullValue='-', FallbackValue='-'}"
                             HorizontalAlignment="Center"
                             VerticalAlignment="Center"
                             FontWeight="Bold"
@@ -76,13 +81,13 @@
                                Style="{StaticResource GrayOnDisabledTextBlock}" />
                     <Grid Height="28" Margin="0,0,0,10" VerticalAlignment="Center">
                         <ProgressBar
-                            Value="{Binding Device.CaptureVolumeLevel, Mode=OneWay}"
+                            Value="{Binding Device.CaptureVolumeLevel, Mode=OneWay, TargetNullValue='-', FallbackValue='-'}"
                             Maximum="1000"
                             Height="28"
                             VerticalAlignment="Center"
                             Opacity="{Binding CapturingAvailability2IndicatorOpacity}" />
                         <TextBlock
-                            Text="{Binding Device.CaptureVolumePercentText, Mode=OneWay, TargetNullValue='-'}"
+                            Text="{Binding Device.CaptureVolumePercentText, Mode=OneWay, TargetNullValue='-', FallbackValue='-'}"
                             HorizontalAlignment="Center"
                             VerticalAlignment="Center"
                             FontWeight="Bold"
